<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/greyBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/name"
                android:textSize="32sp"
                app:layout_constraintBottom_toTopOf="@+id/text_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/index_0"
                android:textColor="@color/detail"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />

            <View
                android:id="@+id/divider"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/greyBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_description" />

            <TextView
                android:id="@+id/displaytime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_access_time_black_24dp"
                android:text="@string/time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <ImageButton
                android:id="@+id/btnChat"
                android:layout_width="33dp"
                android:layout_height="28dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="@+id/displaytime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.873"
                app:layout_constraintStart_toEndOf="@+id/displaytime"
                app:layout_constraintTop_toTopOf="@+id/displaytime"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_chat_bubble_black_24dp"
                android:contentDescription="@string/chat_button" />

            <ImageButton
                android:id="@+id/iconType"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="2dp"
                android:background="@null"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@+id/iconStatus"
                app:layout_constraintHorizontal_bias="0.972"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/corgi"
                android:contentDescription="@string/type_pet" />

            <ImageButton
                android:id="@+id/iconStatus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:background="@null"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/iconType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iconType"
                app:layout_constraintVertical_bias="0.0"
                tools:srcCompat="@drawable/love"
                android:contentDescription="@string/find" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>