<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.description.Description">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088"
        android:clickable="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPedigree"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/pedigree"
        app:layout_constraintStart_toStartOf="@+id/inputName"
        app:layout_constraintTop_toBottomOf="@+id/inputName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pedigree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/age"
        app:layout_constraintStart_toStartOf="@+id/inputPedigree"
        app:layout_constraintTop_toBottomOf="@+id/inputPedigree">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_date_range_black_24dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/category"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_curve"
        android:elevation="10dp"
        android:text="@string/addH"
        android:textColor="@color/whiht"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.839" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/gender"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/input"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/first"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/gender">

        <RadioButton
            android:id="@+id/Male"
            style="@style/MyMainRoundedActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_top"
            android:text="Male"
            android:button="@null"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/Female"
            style="@style/MyMainRoundedActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_top"
            android:buttonTint="#FFFFFF"
            android:checked="false"
            android:text="Female"
            android:button="@null"
            android:textColor="@android:color/black" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>