<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/login">

    <TextView
        android:id="@+id/login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@android:dimen/notification_large_icon_height"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:text="@string/register"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:textColorHint="@color/detail"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmailreg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:padding="@dimen/activity_margin_top"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/detail"
        app:hintEnabled="true"
        app:layout_constraintStart_toStartOf="@+id/inputName"
        app:layout_constraintTop_toBottomOf="@+id/inputName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassreg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:padding="@dimen/activity_margin_top"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmpassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/detail"
        app:hintEnabled="true"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cPassreg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:padding="@dimen/activity_margin_top"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_curve"
        android:elevation="10dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/whiht"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showwrog" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/button_curve"
        android:elevation="10dp"
        android:text="@string/cancelbtn"
        android:textAllCaps="false"
        android:textColor="@color/whiht"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showwrog" />

    <TextView
        android:id="@+id/showwrog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="#A93226 "
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>