<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_curve"
        android:elevation="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showwronglogin" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@android:dimen/notification_large_icon_height"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:textColorHint="@color/detail"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmaillogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_margin_top"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="242dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/detail"
        app:hintEnabled="true"
        app:layout_constraintStart_toStartOf="@+id/inputName"
        app:layout_constraintTop_toBottomOf="@+id/inputName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passlogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:padding="@dimen/activity_margin_top"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/showwrog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="#A93226 "
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
    <TextView
        android:id="@+id/forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_passwords"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/sigup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#3C3C3C"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:shadowColor="@android:color/black"
        android:text="@string/sign_up"
        android:textColor="@android:color/black"
        android:textColorLink="@color/btnAccept"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sigup"
        app:layout_constraintStart_toEndOf="@+id/sigup"
        app:layout_constraintTop_toTopOf="@+id/sigup"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_btn"
        app:layout_constraintVertical_bias="0.154" />

    <View
        android:id="@+id/view3"
        android:layout_width="95dp"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/detail"
        app:layout_constraintBottom_toBottomOf="@+id/or"
        app:layout_constraintEnd_toStartOf="@+id/or"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/or" />

    <View
        android:id="@+id/view4"
        android:layout_width="95dp"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/detail"
        app:layout_constraintBottom_toBottomOf="@+id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toEndOf="@+id/or"
        app:layout_constraintTop_toTopOf="@+id/or"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/showwronglogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetpass" />
</androidx.constraintlayout.widget.ConstraintLayout>